--- a/Frameless/Info.plist
+++ b/Frameless/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>ClearSans-Regular.ttf</string>
+		<string>ClearSans-Italic.ttf</string>
+		<string>ClearSans-Bold.ttf</string>
+		<string>ClearSans-BoldItalic.ttf</string>
+	</array>
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
