implemented a screen idle timer functionality where the main screen is automatically dimmed and a separate black screen view is overlaid over all existing views. This should allow to set an idle timer (in the setup) so that the browser is automatically set blank if no further gesture/touch has been performed for a certain amount of time.

--- a/Frameless/Info.plist
+++ b/Frameless/Info.plist
@@ -29,6 +29,10 @@
 		<string>ClearSans-Bold.ttf</string>
 		<string>ClearSans-BoldItalic.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
